--- a/dtc_server/dtc_vue/public/index.html
+++ b/dtc_server/dtc_vue/public/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
@@ -15,3 +17,10 @@
     <!-- built files will be auto injected -->
   </body>
 </html>
+
+<style>
+  body {
+    font-family: 'Noto Sans TC', sans-serif;
+    margin: 0;
+  }
+</style>
