--- a/dtc_server/dtc_vue/public/index.html
+++ b/dtc_server/dtc_vue/public/index.html
@@ -20,7 +20,7 @@
 
 <style>
   body {
-    font-family: 'Noto Sans TC', sans-serif;
+    font-family: "Lora", sans-serif;
     margin: 0;
   }
 </style>
